--- a/wiki/zBar3.wiki
+++ b/wiki/zBar3.wiki
@@ -14,6 +14,6 @@ It's still developing and intend to be
 = Feature draft =
 
 List of features in my mind,
-  * RangeColor option
+  * Range color option
   * Improved sticky feature
   * Improved free style layout
