Edited wiki page through web user interface.

--- a/wiki/zBar3.wiki
+++ b/wiki/zBar3.wiki
@@ -17,3 +17,6 @@ List of features in my mind,
   * Range color option
   * Improved sticky feature
   * Improved free style layout
+  * Tabbed option page: global, bar, other
+  * (Mybe we don't like a tabbed option panel, want see them all in one time)
+  * unlock all bar, open binding page
