--- a/wiki/zBar2.wiki
+++ b/wiki/zBar2.wiki
@@ -1,16 +1,18 @@
 #summary Intro to zBar2 on Curse.
+#sidebar TableOfContents
 
+<wiki:toc max_depth="2" />
 
-__/ Notes \__
+=Notes=
 
     * The author is a None-English-Speaker, please bear with me when I saying something 
 
-__/ Intro \__
+=Intro=
 
     * zBar is an ActionBar mod that allows you modify layout of action bars easily.
     * Some automatic features will help you to handle so many actions of your own. 
 
-Why this ?
+==Why this ?==
 
 Maybe you want ::
 
@@ -20,15 +22,15 @@ Maybe you want ::
     * Quick and Easy settings
     * Low memory usage 
 
-__/ Usage \__
-Basics
+=Usage=
+==Basics==
 
     * Move bar by dragging the tab, which is on top of the first button
     * Left Click on tab will minimize bar, Right Click will summon the Option Window
     * All the Features can be set in that tiny window
     * Send message "/zbar" to open the option window if you can't find any tab. 
 
-You Should Konw
+==You Should Konw==
 
 Free Style - when you layout buttons in free style, please hold "ctrl+alt+shift" fist, mouse enter button AFTER, if you see a box over the button then you can drag it or mouse wheel it. Enjoy! 
 
@@ -47,30 +49,32 @@ cyCircled - cyCircled is supported, make sure you download the latest version of
  
 
 Saves - Positions are saved in SavedVariable file. U can move it to some other Account to copy your options AND positions, remember to keep the same ui scale.(you can find this file in wowdir \ WTF \ Account \ account \ realm \ character \ SavedVariables \ zBar2.lua)
-___/ Features \___
-Auto Pop & Auto Hide
+
+=Features=
+
+==Auto Pop & Auto Hide==
 
     * AutoPop: Bar with this feature enabled will only be shown while inCombat or targeting on enemy
     * AutoHide: Hide while inCombat or targeting on enemy
     * U can put two bar at same place, one AutoPop, another AutoHide, then it'll work just like auto swich page. 
 
-Auto Page
+==Auto Page==
 
     * Hold alt key or has assitable target, the MainBar will switch to page 2.
     * U could put healing spells or heal stone, potions, bandage into page 2 
 
-Simple Stick Sticky
+==Simple Stick Sticky==
 
     * Drag tab into any button, hold modifier keys at the same time
     * Ctrl: Stick to Bottom of target button
     * Shift: Stick to Right of target button 
 
-Transparency and Minimize
+==Transparency and Minimize==
 
     * Drag "Alpha" slider will transparentize bar, recover when getting mouse focus
     * Left click on tab will minimize bar, this state will not be saved 
 
-Layouts - Multi-Line and Special
+==Layouts - Multi-Line and Special==
 
     * Set num of buttons per line will queue buttons as multi line
     * Click radio buttons of "Layout" will get an special layout
@@ -80,37 +84,37 @@ Layouts - Multi-Line and Special
          4. Free: Move a button by hold Ctrl+Alt+Shift and drag it. Scale it by Mouse Wheel.
          5. Invert: Mirror the layout Horizontally, left to right, right to left. 
 
-Extra bar and Shadow bar
+==Extra bar and Shadow bar==
 
     * Two Extra Bar, 24 Buttons, the page will choose by your class
     * Shadow bar use the buttons that Extra bar thrown
     * e.g. ExtraBar1 set button num to 7, then ShadowBar1 get 5 button
     * To know how this gonna work, try change the num of buttons 
 
-Lite Mode and Customize
+==Lite Mode and Customize==
 
     * Enable the mod "zBar2Lite" will make zBar2 into Lite Mode
     * Lite Mode only have extra bar and shadow bar, No Changes to Default UI
     * You can Customize which plugin to be load, please read the readme file 
 
-Mini XP bar
+==Mini XP bar==
 
     * A half size XP bar, movable, scaleable. Has all the feature of the original one
     * The width can be changed by adjust "Num of Buttons" 
 
-Simple Cast bar
+==Simple Cast bar==
 
     * Simply replaced texture and makes spell icon show on left. movable, scaleable
     * Change "Num of Buttons" to hide the spell icon
     * Set "Invert" to make spell icon show on the other side. 
 
-Bag packs and Key Ring
+==Bag packs and Key Ring==
 
     * Bag Bar sort it's buttons in reverse, Key Ring and Performance Bar show on left
     * If Bag Bar only has one button left, the Key Ring will still show
     * Thus you can keep the main bag pack with the key ring and performance bar on left 
 
-Possess Bar
+==Possess Bar==
 
     * PossessBar shows when you contronl a mob
     * It'll replace position of StanceBar
@@ -118,11 +122,11 @@ Possess Bar
     * You should Bind a key on Button1, well I choose "Shift + `"
     * Button 2 will cancel the Possess state 
 
-cyCircled support
+==cyCircled support==
 
     * Please download the latest version : http://files.wowace.com/cyCircled/cyCircled.zip 
 
-__/ Slash Command \__
+=Slash Command=
 
 /zbar (show option window)  
 
