--- a/wiki/zBar3.wiki
+++ b/wiki/zBar3.wiki
@@ -1,5 +1,8 @@
 #summary Introduction of zBar version 3.
 #labels Featured
+#sidebar TableOfContents
+
+<wiki:toc max_depth="1" />
 
 = Introduction =
 
