Edited wiki page through web user interface.

--- a/wiki/zBar2.wiki
+++ b/wiki/zBar2.wiki
@@ -1,4 +1,4 @@
-#summary Intro to zBar2 on Curse.
+#summary Intro to zBar2 on Curse. Maybe not correct with the latest version for WoTLK.
 #labels Featured
 #sidebar TableOfContents
 
