--- a/wiki/zBar3.wiki
+++ b/wiki/zBar3.wiki
@@ -13,6 +13,12 @@ It's still developing and intend to be
   * Modify code to be clean and strong
   * More easier to use
 
+= Implemented =
+
+  * hover on tab to show bar name, with fade in/out animate
+  * click on tab to collapse a shown bar, hover on tab to expand it
+
+
 = Feature draft =
 
 List of features in my mind,
